--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Card Game</title>
+  <title>Dahjong!</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -17,103 +17,88 @@
   </header>
 
 
-  <div class="main">
+  <div class="play-space">
   
-    <div class="player-container">
-	  <div id="player-info" class="flexrow">
-	    <span class="opponent-name">Player 1</span>
-        <span class="opponent-wind">southwest</span>
-        <span class="opponent-points">5321</span>
+    <div class="action-area">
+	<span id="game-statement">It's your turn!</span>
+	</div>
+	<div id="player-container" class="actor-container player-container">
+	  <div id="actor-info" class="flexrow">
+	    <span class="actor-name">Player 1</span>
+        <span class="actor-wind">southwest</span>
+        <span class="actor-points">5321</span>
+	  </div>
+	  <div id="player-tiles" class="actor-grid">
+		  <div id="player-hand" class="tile-container actor-hand">
+		    <div id="tile-arrow"><img src="tiles/arrow.svg" alt="Arrow" class="arrow"></div>
+		    Hand:<br>
+		  </div>		  
+		  <div id="player-discard" class="tile-container discard-container actor-discard">
+		    Discards:<br>
+		  </div>
+		  <div id="player-meld" class="tile-container actor-meld">
+		    Melds:<br>
+		  </div>
 	  </div>
 	</div>
   
     <div class="opponent-stack">
-      <div id="opponent1-container" class="opponent-container">
-	    <div id="opponent-info" class="flexrow">
-          <span class="opponent-name">Player 1</span>
-		  <span class="opponent-wind">EAST</span>
-		  <span class="opponent-points">12345</span>
+      <div id="opponent1-container" class="actor-container opponent-container">
+	    <div id="actor-info" class="flexrow">
+          <span class="actor-name">Player 1</span>
+		  <span class="actor-wind">EAST</span>
+		  <span class="actor-points">12345</span>
 		</div>
-        <div id="opponent-tiles" class="flexrow">
-		  <!-- Game information elements for Player 1 -->
-		  <div id="opponent-hand" class="hand-container">
-		    <p>Hand:</p>
+        <div id="opponent1-tiles" class="actor-grid">
+		  <div id="opponent1-hand" class="tile-container actor-hand">
+		    Hand:<br>
+		  </div>		  
+		  <div id="opponent1-discard" class="tile-container discard-container actor-discard">
+		    Discards:<br>
 		  </div>
-		  <div id="opponent-discard" class="discard-container">
-		    <p>Discards:</p>
+		  <div id="opponent1-meld" class="tile-container actor-meld">
+		    Melds:<br>
 		  </div>
         </div>
       </div>
-      <div id="opponent2-container" class="opponent-container">
-	    <div id="opponent-info" class="flexrow">
-          <span class="opponent-name">Player 1</span>
-		  <span class="opponent-wind">EAST</span>
-		  <span class="opponent-points">12345</span>
+      <div id="opponent2-container" class="actor-container opponent-container">
+	    <div id="actor-info" class="flexrow">
+          <span class="actor-name">Player 1</span>
+		  <span class="actor-wind">EAST</span>
+		  <span class="actor-points">12345</span>
 		</div>
-        <div id="opponent-tiles" class="flexrow">
-		  <!-- Game information elements for Player 1 -->
-		  <div id="opponent-hand" class="hand-container">
-		    <p>Hand:</p>
+        <div id="opponent2-tiles" class="actor-grid">
+		  <div id="opponent2-hand" class="tile-container actor-hand">
+		    Hand:<br>
+		  </div>		  
+		  <div id="opponent2-discard" class="tile-container discard-container actor-discard">
+		    Discards:<br>
 		  </div>
-		  <div id="opponent-discard" class="discard-container">
-		    <p>Discards:</p>
+		  <div id="opponent2-meld" class="tile-container actor-meld">
+		    Melds:<br>
 		  </div>
         </div>
       </div>
-      <div id="opponent3-container" class="opponent-container">
-	    <div id="opponent-info" class="flexrow">
-          <span class="opponent-name">Player 1</span>
-		  <span class="opponent-wind">EAST</span>
-		  <span class="opponent-points">12345</span>
+      <div id="opponent3-container" class="actor-container opponent-container">
+	    <div id="actor-info" class="flexrow">
+          <span class="actor-name">Player 1</span>
+		  <span class="actor-wind">EAST</span>
+		  <span class="actor-points">12345</span>
 		</div>
-        <div id="opponent-tiles" class="flexrow">
-		  <!-- Game information elements for Player 1 -->
-		  <div id="opponent-hand" class="hand-container">
-		    <p>Hand:</p>
+        <div id="opponent3-tiles" class="actor-grid">
+		  <div id="opponent3-hand" class="tile-container actor-hand">
+		    Hand:<br>
+		  </div>		  
+		  <div id="opponent3-discard" class="tile-container discard-container actor-discard">
+		    Discards:<br>
 		  </div>
-		  <div id="opponent-discard" class="discard-container">
-		    <p>Discards:</p>
+		  <div id="opponent3-meld" class="tile-container actor-meld">
+		    Melds:<br>
 		  </div>
         </div>
       </div>
     </div>  
-  
-  
-  
-   <!-- <div class="wrap">                                                 -->
-     <!-- <div class="sidebar">                                            -->
-	                                                                  
-	  <!-- </div>                                                           -->
-	                                                                  
-     <!-- <div class="content">                                            -->
-	    <!-- <div class="game-board">                                       -->
-         <!-- <div class="player-area" id="player1-area">                  -->
-           <!-- <h2>Player 1</h2>                                          -->
-           <!-- <div class="card-container" id="player1-hand">             -->
-              <!-- Player 1's cards will be dynamically added here -->
-           <!-- </div>                                                     -->
-         <!-- </div>                                                       -->
-         <!-- <div class="player-area" id="player2-area">                  -->
-           <!-- <h2>Player 2</h2>                                          -->
-           <!-- <div class="card-container" id="player2-hand">             -->
-              <!-- Player 2's cards will be dynamically added here -->
-           <!-- </div>                                                     -->
-         <!-- </div>                                                       -->
-         <!-- <div class="player-area" id="player3-area">                  -->
-           <!-- <h2>Player 3</h2>                                          -->
-           <!-- <div class="card-container" id="player3-hand">             -->
-              <!-- Player 3's cards will be dynamically added here -->
-           <!-- </div>                                                     -->
-         <!-- </div>                                                       -->
-         <!-- <div class="player-area" id="player4-area">                  -->
-           <!-- <h2>Player 4</h2>                                          -->
-           <!-- <div class="card-container" id="player4-hand">             -->
-              <!-- Player 4's cards will be dynamically added here -->
-           <!-- </div>                                                     -->
-         <!-- </div>                                                       -->
-       <!-- </div>                                                         -->
-	  <!-- </div>                                                           -->
-   <!-- </div>                                                             -->
+
   </div>
 
 
