Basic gameplay loop, set up game manager, tied imgs to tile objects, and completed meldTiles() - have not tested it yet

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <div class="action-area">
 	  <div id="left-panel">
 	    <img src="tiles/wind/01.svg" alt="wind" class="round-wind">
+		Tiles left in deck: <span id='tiles-in-deck'>X</span>
 	  </div>
 	  <div id="center-panel">
 	    <span>It's your turn!</span>
